k8s/module-7/nexus.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nexus-deployment
  namespace: nexus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nexus
  template:
    metadata:
      labels:
        app: nexus
    spec:
      containers:
      - name: nexus-server
        image: sonatype/nexus3
        ports:
          - containerPort: 8081
          - containerPort: 5000
        volumeMounts:
          - mountPath: /nexus-data
            name: nexus-data-volume
      volumes:
        - name: nexus-data-volume
          persistentVolumeClaim:
            claimName: pvc-nexus
---
apiVersion: v1
kind: Service
metadata:
  name: nexus-svc
  namespace: nexus
spec:
  ports:
  - port: 80
    targetPort: 8081
    protocol: TCP
    name: http
  - port: 5000
    targetPort: 5000
    protocol: TCP
    name: docker
  selector:
    app: nexus
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nexus-ingress
  namespace: nexus
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: nexus.cluster.mbazhok.playpit.net
    http:
      paths:
      - path: /
        backend:
          serviceName: nexus-svc
          servicePort: 80
  - host: nexus.cluster.mbazhok.playpit.net
    http:
      paths:
      - path: /
        backend:
          serviceName: nexus-svc
          servicePort: 5000
---
